--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,8 @@
         }
     ],
     "require": {
+        "sculpin/sculpin": "^2.1@dev",
+        "dflydev/embedded-composer": "^1.0@dev",
         "components/bootstrap": "^3.3.6",
         "components/jquery": "~1.9.1",
         "components/highlightjs": "~7.3.0",
