fixed the horrible `array to string conversion` warning

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -3,6 +3,7 @@
 # in a template to get the contents of the `title` key.
 title: Tekkie Consulting
 subtitle: Think. Discover. Design. Develop.
+feed_author: Tekkie Consulting
 email: office+dev@tekkie.ro
 analytics:
   google: UA-2511156-5
