more about text; small padding on page content

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -29,7 +29,7 @@ main_menu_links:
 meta:
   fb:
     title: Tekkie Consulting
-    url: http://tekkie.ro/
+    url: https://tekkie.ro/
     image: /assets/images/logo-tekkie-consulting.jpg
     description: Tekkie Consulting is the consultancy company of Georgiana Gligor, an application architect crafting efficient large-scale solutions
 
